--- a/kafx/pom.xml
+++ b/kafx/pom.xml
@@ -33,4 +33,11 @@
 			</plugin>
         </plugins>
     </build>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/fabiankaschta/KAFXBase</url>
+    </repository>
+  </distributionManagement>
 </project>
