--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file kafx/pom.xml
     - name: Copy file
-      run: mkdir staging && cp target/*.jar staging
+      run: mkdir staging && cp kafx/target/*.jar staging
     - uses: actions/upload-artifact@v4
       with:
         name: Package
